--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-- name: 730335563796.dkr.ecr.us-east-1.amazonaws.com/meu-react-app
+- name: 730335563796.dkr.ecr.us-east-1.amazonaws.com/meu-projeto-gitops
   newTag: latest
