Fix: Adicionando recursos ao kustomize

--- a/kustomization.yml
+++ b/kustomization.yml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - deployment.yml
 images:
-- name: 730335563796.dkr.ecr.us-east-1.amazonaws.com/meu-projeto-gitops
-  newTag: "23"
+  - name: 730335563796.dkr.ecr.us-east-1.amazonaws.com/meu-projeto-gitops
+    newTag: "23"
